Fixes width of equation container on small windows.

--- a/style.css
+++ b/style.css
@@ -261,7 +261,6 @@ canvas {
 
 .equationContainer {
     margin-top: 20px;
-    width: 100%;
 }
 
 .equationName {
